# rag-tester

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  bob_shell_exec_command_output  docker-compose.yml  implementation-evaluation.md  pyproject.toml  setup_postgresql_test.sh
.agent_docs/: makefile.md  python.md
.bob/: e2e-tests-complete.md  e2e-tests-draft.md
.bob/notes/: pending-notes.txt
.github/workflows/: ci.yml
specs/: 2026-04-29_18:26:42-rag-testing-framework.md
src/rag_tester/: __init__.py  config.py  logging_config.py  rag_tester.py  tracing.py  version.py
src/rag_tester/commands/: __init__.py  _bulk_test_execution.py  _bulk_test_parsing.py  answer.py  bulk_test.py  compare.py  load.py  test.py
src/rag_tester/core/: __init__.py  _loader_modes.py  comparator.py  loader.py  tester.py  validator.py
src/rag_tester/providers/: __init__.py
src/rag_tester/providers/databases/: __init__.py  _chromadb_helpers.py  _elasticsearch_helpers.py  _milvus_helpers.py  _postgresql_helpers.py  _sqlite_helpers.py  base.py  chromadb.py  elasticsearch.py  milvus.py  postgresql.py  sqlite.py
src/rag_tester/providers/embeddings/: __init__.py  base.py  gemini.py  local.py  openrouter.py
src/rag_tester/providers/llm/: __init__.py  base.py  openrouter.py
src/rag_tester/utils/: __init__.py  cost.py  file_io.py  progress.py  retry.py
stories/: US-001_core-infrastructure.md  US-002_local-embeddings-chromadb.md  US-003_load-command-complete.md  US-004_test-command.md  US-005_bulk-test-command.md  US-006_compare-command.md  US-007_load-modes.md  US-008_api-embedding-providers.md  US-009_additional-database-backends.md  _index.md
tests/: conftest.py  test_cli.py  test_config.py  test_logging.py  test_tracing.py  test_version.py
tests/e2e/: README.md  __init__.py  conftest.py  test_core_journeys.py  test_error_handling.py  test_milvus.py  test_postgresql.py  test_us002_providers.py  test_us003_load.py  test_us004_test.py  test_us005_bulk_test.py  test_us006_compare.py  test_us007_load_modes.py  test_us008_api_providers.py  test_us009_elasticsearch.py  test_us009_sqlite.py
tests/test_commands/: test_answer.py  test_bulk_test.py  test_compare.py  test_load.py  test_test.py
tests/test_core/: test_comparator.py  test_loader.py  test_tester.py  test_validator.py
tests/test_providers/: test_factory.py
tests/test_providers/test_databases/: __init__.py  test_chromadb.py  test_elasticsearch.py  test_milvus.py  test_postgresql.py  test_sqlite.py
tests/test_providers/test_embeddings/: test_gemini.py  test_local.py  test_openrouter.py
tests/test_providers/test_llm/: test_openrouter_llm.py
tests/test_utils/: test_cost.py  test_file_io.py  test_progress.py  test_retry.py
traces/: rag-tester.jsonl
